# auditory-vr-corridor

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml
.bonsai/: Bonsai.config
.bonsai/Settings/src/: main.layout
Extensions/: UclOpenAuditoryVrCorridor.Generated.cs
examples/: helpers.py  rig.py  task.py
gen-sessions/: gen_session.py  helpers.py
local_packages/: UclOpen.Core.42.42.42-dev0.nupkg  UclOpen.Devices.42.42.42-dev0.nupkg  UclOpen.Logging.42.42.42-dev0.nupkg  UclOpen.Video.42.42.42-dev0.nupkg  UclOpen.Vision.42.42.42-dev0.nupkg
scripts/: analyse-harp-log.ipynb  deploy.cmd  deploy.ps1  gen-background-noise.ipynb  plot_harp_log.ipynb
session-schemas/current-session/: UclOpenAuditoryVrCorridorTaskLogic.json
session-schemas/prev-sessions/: UclOpenAuditoryVrCorridorTaskLogic_2026-03-03T17_33_39.json  UclOpenAuditoryVrCorridorTaskLogic_2026-03-03T17_38_51.json
src/: Extensions.csproj  gen-waveforms.ipynb  main.bonsai  main_dev.bonsai
src/DataSchemas/: device.yml  ucl_open_auditory_vr_corridor.json
src/Extensions/: JsonWriter.cs  MoveStepperMotors.bonsai  UclOpenAuditoryVrCorridor.Generated.cs  UnpackSwitchTriggers.cs  ZEROingMotors.bonsai
src/ucl_open_auditory_vr_corridor/: helpers.py  regenerate.py  rig.py  task copy.py  task.py
src/waveforms/: frequencies.txt
